--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,7 @@
-
+.para{width:300px;
+	 border:15px solid blue;
+	 background-color:lightblue;
+	 padding:50px;
+	 margin:20px;
+	}
 /* Your CSS Code here. */
